[gd_scene load_steps=27 format=2]

[ext_resource path="res://Stages/Rap Battle/bossdaddydearest.png" type="Texture" id=1]
[ext_resource path="res://Stages/Rap Battle/Arrows/arrowupsillhouette-sheet.png" type="Texture" id=2]
[ext_resource path="res://Stages/Rap Battle/Arrows/arrowrightsillhouette.png" type="Texture" id=3]
[ext_resource path="res://Stages/Rap Battle/Arrows/arrowleftsillhouette.png" type="Texture" id=4]
[ext_resource path="res://Stages/Rap Battle/Arrows/arrowdownsillhouette.png" type="Texture" id=5]
[ext_resource path="res://Characters/Hitboxes/Hitbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Stages/Rap Battle/DaAdultAI.gd" type="Script" id=7]
[ext_resource path="res://Stages/Rap Battle/Arrows/Charting.gd" type="Script" id=8]
[ext_resource path="res://Stages/Rap Battle/Arrows/arrowleft.png" type="Texture" id=9]
[ext_resource path="res://Stages/Rap Battle/Arrows/arrowup.png" type="Texture" id=10]
[ext_resource path="res://Stages/Rap Battle/Arrows/arrowdown.png" type="Texture" id=11]
[ext_resource path="res://Stages/Rap Battle/Arrows/arrowright.png" type="Texture" id=12]

[sub_resource type="Animation" id=1]
resource_name = "Down"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=2]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Left"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Right"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Up"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 10, 3 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 10, 3 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 10, 3 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 10, 3 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 0, 0, 30, 0, 30, 30, 0, 30 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 0, 0, 30, 0, 30, 30, 0, 30 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 0, 0, 30, 0, 30, 30, 0, 30 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 0, 0, 30, 0, 30, 30, 0, 30 )

[sub_resource type="TileSet" id=14]
0/name = "arrowdown.png 0"
0/texture = ExtResource( 11 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 30, 30 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 10 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "arrowleft.png 1"
1/texture = ExtResource( 9 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 30, 30 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 11 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "arrowup.png 2"
2/texture = ExtResource( 10 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 30, 30 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 12 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "arrowright.png 3"
3/texture = ExtResource( 12 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 30, 30 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 13 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0

[node name="Node2D" type="Node2D"]
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 255, 91 )
texture = ExtResource( 1 )
hframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
autoplay = "Idle"
anims/Down = SubResource( 1 )
anims/Idle = SubResource( 2 )
anims/Left = SubResource( 3 )
anims/Right = SubResource( 4 )
anims/Up = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4

[node name="Left" type="Sprite" parent="."]
position = Vector2( 189, 0 )
texture = ExtResource( 4 )
centered = false
hframes = 2
__meta__ = {
"_edit_group_": true
}

[node name="LeftHit" parent="Left" instance=ExtResource( 6 )]
position = Vector2( 15, 15 )
collision_layer = 32
collision_mask = 64

[node name="CollisionShape2D" parent="Left/LeftHit" index="0"]
position = Vector2( 0, -11 )
shape = SubResource( 6 )

[node name="Down" type="Sprite" parent="."]
position = Vector2( 219, 0 )
texture = ExtResource( 5 )
centered = false
hframes = 2
__meta__ = {
"_edit_group_": true
}

[node name="DownHit" parent="Down" instance=ExtResource( 6 )]
position = Vector2( 15, 15 )
collision_layer = 32
collision_mask = 64

[node name="CollisionShape2D" parent="Down/DownHit" index="0"]
position = Vector2( 0, -11 )
shape = SubResource( 7 )

[node name="Up" type="Sprite" parent="."]
position = Vector2( 249, 0 )
texture = ExtResource( 2 )
centered = false
hframes = 2
__meta__ = {
"_edit_group_": true
}

[node name="UpHit" parent="Up" instance=ExtResource( 6 )]
position = Vector2( 15, 15 )
collision_layer = 32
collision_mask = 64

[node name="CollisionShape2D" parent="Up/UpHit" index="0"]
position = Vector2( 0, -11 )
shape = SubResource( 8 )

[node name="Right" type="Sprite" parent="."]
position = Vector2( 279, 0 )
texture = ExtResource( 3 )
centered = false
hframes = 2
__meta__ = {
"_edit_group_": true
}

[node name="RightHit" parent="Right" instance=ExtResource( 6 )]
position = Vector2( 15, 15 )
collision_layer = 32
collision_mask = 64

[node name="CollisionShape2D" parent="Right/RightHit" index="0"]
position = Vector2( 0, -11 )
shape = SubResource( 9 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
script = ExtResource( 8 )

[node name="TileMap" type="TileMap" parent="KinematicBody2D"]
position = Vector2( -21, 0 )
tile_set = SubResource( 14 )
cell_size = Vector2( 30, 30 )
collision_use_kinematic = true
collision_layer = 64
collision_mask = 0
format = 1

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Left/LeftHit" to="." method="_on_LeftHit_body_entered"]
[connection signal="body_entered" from="Down/DownHit" to="." method="_on_DownHit_body_entered"]
[connection signal="body_entered" from="Up/UpHit" to="." method="_on_UpHit_body_entered"]
[connection signal="body_entered" from="Right/RightHit" to="." method="_on_RightHit_body_entered"]

[editable path="Left/LeftHit"]
[editable path="Down/DownHit"]
[editable path="Up/UpHit"]
[editable path="Right/RightHit"]
